add llm features

--- a/Notebooks/cub_preprocess.ipynb
+++ b/Notebooks/cub_preprocess.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e6e928e4",
    "metadata": {},
    "outputs": [],
@@ -43,17 +43,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "id": "5579cac3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"statement.csv\", header=None)"
+    "df = pd.read_csv(\"../statement.csv\", header=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "id": "4127456a",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
        "4  47.50     NaN  18,889.28  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "id": "1f47f7b3",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "id": "e5a98367",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "id": "4263e8ce",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,7 @@
        "5  1.00  18,890.28  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "id": "491542a2",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "id": "4cd8e562",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "id": "0cdeb239",
    "metadata": {},
    "outputs": [
@@ -402,7 +402,7 @@
        "5  07/04/2025  BY ONL UPI/CR/509734628153/KHURSHID/NSPB/AKURS...    NaN  1.00"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "id": "7fb2e25f",
    "metadata": {},
    "outputs": [],
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "id": "c8d43e36",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
        "5  07/04/2025  BY ONL UPI/CR/509734628153/KHURSHID/NSPB/AKURS...    NaN   1.00"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 16,
    "id": "fae27dab",
    "metadata": {},
    "outputs": [],
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 17,
    "id": "bfee8b9d",
    "metadata": {},
    "outputs": [
@@ -617,7 +617,7 @@
        "5   1.00  Expenses:UPI  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 18,
    "id": "43ecb486",
    "metadata": {},
    "outputs": [],
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 19,
    "id": "c2123fc0",
    "metadata": {},
    "outputs": [],
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 20,
    "id": "d4838137",
    "metadata": {},
    "outputs": [],
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 21,
    "id": "6cc9a211",
    "metadata": {},
    "outputs": [],
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 22,
    "id": "e95b8f0a",
    "metadata": {},
    "outputs": [
@@ -773,7 +773,7 @@
        "5     1.0  Expenses:UPI     1.0  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 23,
    "id": "c2bb69f9",
    "metadata": {},
    "outputs": [],
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 24,
    "id": "f848cb35",
    "metadata": {},
    "outputs": [
@@ -881,7 +881,7 @@
        "5  Expenses:UPI     1.0  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 25,
    "id": "02ed1f24",
    "metadata": {},
    "outputs": [],
@@ -902,18 +902,393 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "d0367606",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Account</th>\n",
+       "      <th>Amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>03/04/2025</td>\n",
+       "      <td>TO ONL UPI/DR/509335780211/THE ULTI/YESB/PAYTM...</td>\n",
+       "      <td>Expenses:UPI</td>\n",
+       "      <td>-30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>04/04/2025</td>\n",
+       "      <td>TO ONL UPI/DR/546087903003/INDIAN I/SBIN/38329...</td>\n",
+       "      <td>Expenses:UPI</td>\n",
+       "      <td>-17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>04/04/2025</td>\n",
+       "      <td>TO ONL UPI/DR/546078415439/INDIAN I/SBIN/38329...</td>\n",
+       "      <td>Expenses:UPI</td>\n",
+       "      <td>-32.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>06/04/2025</td>\n",
+       "      <td>TO ONL UPI/DR/546320612982/SAPTARSI/SBIN/SAPTA...</td>\n",
+       "      <td>Expenses:UPI</td>\n",
+       "      <td>-47.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>07/04/2025</td>\n",
+       "      <td>BY ONL UPI/CR/509734628153/KHURSHID/NSPB/AKURS...</td>\n",
+       "      <td>Expenses:UPI</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>28/06/2025</td>\n",
+       "      <td>TO ONL UPI/DR/517984203840/RS AGENC/YESB/PAYTM...</td>\n",
+       "      <td>Expenses:UPI</td>\n",
+       "      <td>-215.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>29/06/2025</td>\n",
+       "      <td>TO ONL UPI/DR/518086972754/MAHESH S/YESB/PAYTM...</td>\n",
+       "      <td>Expenses:UPI</td>\n",
+       "      <td>-88.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>29/06/2025</td>\n",
+       "      <td>TO ONL UPI/DR/518092952923/VIJAYA K/YESB/PAYTM...</td>\n",
+       "      <td>Expenses:UPI</td>\n",
+       "      <td>-10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>30/06/2025</td>\n",
+       "      <td>BY ONL UPI/CR/503670351815/GOOGLE P/UTIB/GOOGL...</td>\n",
+       "      <td>Expenses:UPI</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>30/06/2025</td>\n",
+       "      <td>BY CREDIT INTEREST:99999</td>\n",
+       "      <td>Income:Interest</td>\n",
+       "      <td>138.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>70 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Date                                        Description  \\\n",
+       "1   03/04/2025  TO ONL UPI/DR/509335780211/THE ULTI/YESB/PAYTM...   \n",
+       "2   04/04/2025  TO ONL UPI/DR/546087903003/INDIAN I/SBIN/38329...   \n",
+       "3   04/04/2025  TO ONL UPI/DR/546078415439/INDIAN I/SBIN/38329...   \n",
+       "4   06/04/2025  TO ONL UPI/DR/546320612982/SAPTARSI/SBIN/SAPTA...   \n",
+       "5   07/04/2025  BY ONL UPI/CR/509734628153/KHURSHID/NSPB/AKURS...   \n",
+       "..         ...                                                ...   \n",
+       "67  28/06/2025  TO ONL UPI/DR/517984203840/RS AGENC/YESB/PAYTM...   \n",
+       "68  29/06/2025  TO ONL UPI/DR/518086972754/MAHESH S/YESB/PAYTM...   \n",
+       "69  29/06/2025  TO ONL UPI/DR/518092952923/VIJAYA K/YESB/PAYTM...   \n",
+       "70  30/06/2025  BY ONL UPI/CR/503670351815/GOOGLE P/UTIB/GOOGL...   \n",
+       "71  30/06/2025                           BY CREDIT INTEREST:99999   \n",
+       "\n",
+       "            Account  Amount  \n",
+       "1      Expenses:UPI   -30.0  \n",
+       "2      Expenses:UPI   -17.0  \n",
+       "3      Expenses:UPI   -32.0  \n",
+       "4      Expenses:UPI   -47.5  \n",
+       "5      Expenses:UPI     1.0  \n",
+       "..              ...     ...  \n",
+       "67     Expenses:UPI  -215.0  \n",
+       "68     Expenses:UPI   -88.0  \n",
+       "69     Expenses:UPI   -10.0  \n",
+       "70     Expenses:UPI     2.0  \n",
+       "71  Income:Interest   138.0  \n",
+       "\n",
+       "[70 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df[df['Date'] != \"TOTAL\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "9915e2df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def mask_desc(desc):\n",
+    "    return re.sub(r\"\\d\", \"x\", str(desc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "6acce206",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Account</th>\n",
+       "      <th>Amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Date, Description, Account, Amount]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df[\"Description\"] == \"\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "7fc6bbf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Desc_masked'] = df[\"Description\"].apply(mask_desc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "b1f1877f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1     TO ONL UPI/DR/xxxxxxxxxxxx/THE ULTI/YESB/PAYTM...\n",
+       "2     TO ONL UPI/DR/xxxxxxxxxxxx/INDIAN I/SBIN/xxxxx...\n",
+       "3     TO ONL UPI/DR/xxxxxxxxxxxx/INDIAN I/SBIN/xxxxx...\n",
+       "4     TO ONL UPI/DR/xxxxxxxxxxxx/SAPTARSI/SBIN/SAPTA...\n",
+       "5     BY ONL UPI/CR/xxxxxxxxxxxx/KHURSHID/NSPB/AKURS...\n",
+       "                            ...                        \n",
+       "68    TO ONL UPI/DR/xxxxxxxxxxxx/MAHESH S/YESB/PAYTM...\n",
+       "69    TO ONL UPI/DR/xxxxxxxxxxxx/VIJAYA K/YESB/PAYTM...\n",
+       "70    BY ONL UPI/CR/xxxxxxxxxxxx/GOOGLE P/UTIB/GOOGL...\n",
+       "71                             BY CREDIT INTEREST:xxxxx\n",
+       "72                                                  nan\n",
+       "Name: Desc_masked, Length: 71, dtype: object"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Desc_masked\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "0068978c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Account</th>\n",
+       "      <th>Amount</th>\n",
+       "      <th>Desc_masked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>29/06/2025</td>\n",
+       "      <td>TO ONL UPI/DR/518086972754/MAHESH S/YESB/PAYTM...</td>\n",
+       "      <td>Expenses:UPI</td>\n",
+       "      <td>-88.00</td>\n",
+       "      <td>TO ONL UPI/DR/xxxxxxxxxxxx/MAHESH S/YESB/PAYTM...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>29/06/2025</td>\n",
+       "      <td>TO ONL UPI/DR/518092952923/VIJAYA K/YESB/PAYTM...</td>\n",
+       "      <td>Expenses:UPI</td>\n",
+       "      <td>-10.00</td>\n",
+       "      <td>TO ONL UPI/DR/xxxxxxxxxxxx/VIJAYA K/YESB/PAYTM...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>30/06/2025</td>\n",
+       "      <td>BY ONL UPI/CR/503670351815/GOOGLE P/UTIB/GOOGL...</td>\n",
+       "      <td>Expenses:UPI</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>BY ONL UPI/CR/xxxxxxxxxxxx/GOOGLE P/UTIB/GOOGL...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>30/06/2025</td>\n",
+       "      <td>BY CREDIT INTEREST:99999</td>\n",
+       "      <td>Income:Interest</td>\n",
+       "      <td>138.00</td>\n",
+       "      <td>BY CREDIT INTEREST:xxxxx</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>TOTAL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Expenses:Misc</td>\n",
+       "      <td>370.74</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Date                                        Description  \\\n",
+       "68  29/06/2025  TO ONL UPI/DR/518086972754/MAHESH S/YESB/PAYTM...   \n",
+       "69  29/06/2025  TO ONL UPI/DR/518092952923/VIJAYA K/YESB/PAYTM...   \n",
+       "70  30/06/2025  BY ONL UPI/CR/503670351815/GOOGLE P/UTIB/GOOGL...   \n",
+       "71  30/06/2025                           BY CREDIT INTEREST:99999   \n",
+       "72       TOTAL                                                NaN   \n",
+       "\n",
+       "            Account  Amount                                        Desc_masked  \n",
+       "68     Expenses:UPI  -88.00  TO ONL UPI/DR/xxxxxxxxxxxx/MAHESH S/YESB/PAYTM...  \n",
+       "69     Expenses:UPI  -10.00  TO ONL UPI/DR/xxxxxxxxxxxx/VIJAYA K/YESB/PAYTM...  \n",
+       "70     Expenses:UPI    2.00  BY ONL UPI/CR/xxxxxxxxxxxx/GOOGLE P/UTIB/GOOGL...  \n",
+       "71  Income:Interest  138.00                           BY CREDIT INTEREST:xxxxx  \n",
+       "72    Expenses:Misc  370.74                                                nan  "
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "498824b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Desc_masked\"].to_clipboard()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88733332",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -927,7 +1302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
